--- a/a_b_project/Makefile
+++ b/a_b_project/Makefile
@@ -5,5 +5,8 @@ LDFLAGS = -lm
 symnmf: symnmf.o symnmf.h
 	$(CC) -o symnmf symnmf.o $(CFLAGS) $(LDFLAGS)
 
-main.o: symnmf.c
+symnmf.o: symnmf.c
 	$(CC) -c symnmf.c $(CFLAGS)
+
+clean:
+	rm -f *.o symnmf
