--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,7 @@
     "files.associations": {
         "type_traits": "c",
         "stdlib.h": "c",
-        "ratio": "c",
-        "system_error": "c",
-        "array": "c",
-        "functional": "c",
-        "tuple": "c",
-        "utility": "c"
+        "random": "c"
     },
     "python-envs.pythonProjects": [
         {
